# recipe3

./: LICENSE  architecture.txt
.github/workflows/: docker-image.yml  main.yml
backend/app/: .gitignore  README.md  package-lock.json  package.json
backend/app/lib/: Dockerfile  Dockerfile.t4  app-stack.ts
backend/app/lib/lambdas/addRecipe/: Cargo.toml
backend/app/lib/lambdas/addRecipe/src/: main.rs
backend/app/lib/lambdas/addRecipeWorker/: Cargo.toml  Dockerfile
backend/app/lib/lambdas/addRecipeWorker/src/: main.rs
backend/app/lib/lambdas/collectRecipe/: Cargo.toml
backend/app/lib/lambdas/collectRecipe/src/: main.rs
backend/app/lib/lambdas/getRecipes/: Cargo.toml
backend/app/lib/lambdas/getRecipes/src/: main.rs
backend/app/lib/lambdas/getUserRecipes/: Cargo.toml
backend/app/lib/lambdas/getUserRecipes/src/: main.rs
backend/app/lib/lambdas/mintRecipe/: handler.js  package-lock.json  package.json
backend/app/lib/lambdas/tesseract/: Cargo.toml  handler.js  package.json
backend/app/lib/lambdas/tesseract-py/: handler.py  requirements.txt
backend/app/lib/lambdas/tesseract/src/: main.rs
backend/app/lib/lambdas/updateRecipe/: Cargo.toml
backend/app/lib/lambdas/updateRecipe/src/: main.rs
backend/tesseract-service/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.b  Dockerrun.aws.json  README.md
backend/tesseract-service/src/: main.rs
frontend/recipe3/: .gitignore  config-overrides.js  package.json
frontend/recipe3/public/: index.html  manifest.json
frontend/recipe3/src/: App.js  abi.json  index.js
frontend/recipe3/src/components/: CollectModal.js  CreatingRecipeModal.js  CreatingRecipeStep1.js  CreatingRecipeStep2.js  CreatingRecipeStep3.js  CreatingRecipeStepper.js  MintModal.js  NewImageRecipeForm.js  NewRawRecipeForm.js  NewRecipeModal.js  NewURLRecipeForm.js  Recipe.js  RecipeCard.js  RecipeModal.js
frontend/recipe3/src/pages/: Home.js  User.js
frontend/recipe3/src/store/: user-slice.js
nft/: .gitignore  package-lock.json  package.json
nft/artifacts/@openzeppelin/contracts/token/ERC721/extensions/IERC721Metadata.sol/: IERC721Metadata.dbg.json
nft/artifacts/@openzeppelin/contracts/utils/Counters.sol/: Counters.dbg.json
nft/artifacts/@openzeppelin/contracts/utils/math/SignedMath.sol/: SignedMath.dbg.json
nft/artifacts/contracts/RecipeNFT.sol/: RecipeNFT.dbg.json  RecipeNFT.json
nft/cache/: solidity-files-cache.json
nft/contracts/: RecipeNFT.sol
nft/scripts/: deploy-contract.mjs
