[package]
name = "tesseract-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
rusty-tesseract = "1.1.7"


