[package]
name = "addRecipeWorker"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.104"
tokio = {version = "1", features = ["full"]}
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3.27"
hyper-native-tls = "0.3.0"
select = "0.6.0"
uuid = { version="1.4.0", features=["v4", "fast-rng", "macro-diagnostics"] }
openai-api-rs = "0.1.8"
scraper = "0.17.1"
tokio-test = "0.4.2"
lambda_http = "0.8.1"
aws_lambda_events = "0.10.0"
base64 = "0.21.2"
tokio-util = { version="0.7.8", features=["codec"] }
dotenv = "0.15.0"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.27.0"
aws-sdk-s3 = "0.27.0"
aws-types = "0.55.3"
aws-sdk-sns = "0.28.0"
aws-sdk-sqs = "0.28.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
