[package]
name = "collectRecipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
dotenv = "0.15.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tokio-test = "0.4.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
