[package]
name = "tesseract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = {version = "1", features = ["full"]}
tokio-test = "0.4.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
