[package]
name = "updateRecipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
dotenv = "0.15.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.1"
tokio-test = "0.4.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
